--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "d3": "^7.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
