--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^7.1.0",
     "@mui/x-tree-view": "^8.3.1",
     "d3": "^7.9.0",
+    "plotly.js": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3"
   },
