--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/source-sans-pro": "^5.2.5",
+    "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-tree-view": "^8.3.1",
     "d3": "^7.9.0",
